# KaiEngine

./: .gitignore  CMakeLists.txt  README.md  _tree_after.txt
shaders/: default.frag  default.vert
src/Editor/: EditorLayer.h  main.cpp
src/KaiEngine/: Kai.h
src/KaiEngine/Camera/: OrthographicCamera.cpp  OrthographicCamera.h
src/KaiEngine/Core/: Application.cpp  Application.h  Input.cpp  Input.h  Layer.h  Logger.cpp  Logger.h  Window.cpp  Window.h
src/KaiEngine/Renderer/: Buffer.cpp  Buffer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
